[package]
name = "flash-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
enable-ansi-support = "0.1.2"
lazy_static = "1.4.0"
rlua = "0.19.4"
whoami = "1.2.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
